@@ -8,6 +8,7 @@
 - Added testsuite
 - Fixed python expression tokenization, now uses native tokenizer
 - Fixed optimization involving selection and parenthesis in the expression (Rev 260)
+- Fixed futile_union_intersection_subtraction optimization that didn't work when selection operator was in the left subtree (Rev 261)
 
 0.11
 - Font is set only on windows (Rev 206)
